fix style offending tests